--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
+    "format": "prettier --write .",
+    "lint": "next lint",
     "db:migrate:make": "kysely migrate:make new_migration",
     "db:migrate:latest": "kysely migrate:latest",
     "db:seed:make": "kysely seed:make new_seed",
@@ -15,6 +16,7 @@
     "test:cypress": "cypress open"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "better-sqlite3": "^12.2.0",
     "kysely": "^0.28.5",
     "next": "15.5.2",
@@ -33,12 +35,13 @@
     "daisyui": "^5.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "eslint-config-prettier": "^10.1.8",
     "kysely-codegen": "^0.19.0",
     "kysely-ctl": "^0.19.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.5",
-    "typescript": "5.9.3"
+    "typescript": "^5"
   },
   "overrides": {
     "kysely-codegen": {
